# ChronoRAG-Fa

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: logging.yaml  temporal.yaml
src/app/: main.py  pipeline.py
src/common/: logger.py  schemas.py  utils_time.py
src/module3_temporal/: alpha_policy.py  intent.py  lambda_policy.py  recency.py  reranker.py  scorer.py
src/tests/: test_alpha.py  test_integration_contract.py  test_recency.py  test_scorer.py
